# presentation-conda-pypi-internals

./: README.md  mkslides.yml  pyproject.toml
.github/workflows/: test-deploy.yml
slides/: index.md
